Added alpine as base image of the second stage